--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mapbox-gl": "^2.5.1",
+    "react-map-gl": "^6.1.17"
   }
 }
