--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     ]
   },
   "devDependencies": {
+    "@material-ui/core": "^4.12.3",
     "mapbox-gl": "^2.5.1",
     "react-map-gl": "^6.1.17"
   }
